# computational-intelligence-2022-2023-s303435

./: README.md  lab1_set-covering.ipynb  lab3_nim.ipynb  pyproject.toml
lab1/: README.md  lab1_set-covering.ipynb  main.py  pyproject.toml
lab1/lab1/: prova.py  prova2.py
lab2/: README.md  main.ipynb  pyproject.toml
lab2/lab2/: main.ipynb
lab3/: 1_my_solution.ipynb  2_GA.ipynb  3_minmax.ipynb  4_reinforcement_learning.ipynb  README.md  main.ipynb
