[tool.poetry]
name = "computational-intelligence-2022-2023-s303435"
version = "0.1.0"
description = ""
authors = ["GabriG23 <greco.gabriele.1996@gmail.com>"]
readme = "README.md"
packages = [{include = "computational_intelligence_2022_2023_s303435"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
